fix the responsive bug on mobile devices in the form row in job.html by wrapping it in a column

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -424,14 +424,13 @@ h3 {
 
 
 /* //////////////////////////////////////////////forms/////////////////////////////// */
-.cv-legend {
+.cv-bg {
 
   background-image: url(images/job-interview.png);
   background-size: cover;
   background-position: center;
-  height: 100%;
   width: 100%;
-  
+  height: 100%;
 
 }
 
@@ -439,8 +438,8 @@ h3 {
 
   color: #fff;
   background-color: rgba(75, 56, 97, 0.7);
-  width: 80%;
-  height: 60%;
+//   width: 80%;
+//   height: 60%;
   padding: 30px;
   border-radius: .25rem;
  
